# openpool

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: ci.yml  release-staging.yml
apps/api/: Cargo.toml
apps/api/src/: main.rs
apps/web/: Cargo.toml  README.md
apps/web/assets/: main.css
apps/web/src/: main.rs
apps/worker/: Cargo.toml
apps/worker/src/: main.rs
crates/openpool-api/: Cargo.toml
crates/openpool-api/src/: lib.rs  main.rs  oidc.rs  web.rs
crates/openpool-api/tests/: phase5_postgres.rs
crates/openpool-application/: Cargo.toml
crates/openpool-application/src/: lib.rs
crates/openpool-bitcoin/: Cargo.toml
crates/openpool-config/: Cargo.toml
crates/openpool-contract/: Cargo.toml
crates/openpool-contract/src/: lib.rs
crates/openpool-core/: Cargo.toml
crates/openpool-core/src/: bitcoin.rs  config.rs  jobs.rs  lib.rs  payments.rs  payments_mavapay.rs  persistence_sqlx.rs  proof_storage.rs  test_support.rs
crates/openpool-core/tests/: jobs_postgres.rs  persistence_postgres.rs
crates/openpool-domain/: Cargo.toml
crates/openpool-jobs/: Cargo.toml
crates/openpool-jobs/src/: lib.rs
crates/openpool-jobs/tests/: postgres.rs
crates/openpool-observability/: Cargo.toml
crates/openpool-observability/src/: lib.rs
crates/openpool-oidc/: Cargo.toml
crates/openpool-payments/: Cargo.toml
crates/openpool-payments-mavapay/: Cargo.toml
crates/openpool-payments-mavapay/src/: lib.rs
crates/openpool-payments/src/: lib.rs
crates/openpool-persistence-sqlx/: Cargo.toml
crates/openpool-persistence-sqlx/src/: lib.rs
crates/openpool-persistence-sqlx/tests/: postgres.rs
crates/openpool-proof-storage/: Cargo.toml
crates/openpool-protocol/: Cargo.toml
crates/openpool-protocol/src/: domain.rs  lib.rs
crates/openpool-test-support/: Cargo.toml
crates/openpool-test-support/fixtures/: valid-single-entry.json
crates/openpool-test-support/src/: lib.rs
crates/openpool-verifier/: Cargo.toml
crates/openpool-verifier-wasm/: Cargo.toml
crates/openpool-verifier-wasm/src/: lib.rs
crates/openpool-verifier/src/: lib.rs
crates/openpool-verifier/tests/fixtures/: valid-multiple-entry.json
crates/openpool-web/: Cargo.toml
crates/openpool-web/src/: lib.rs
crates/openpool-worker/: Cargo.toml
crates/openpool-worker/src/: main.rs
crates/vlrp-api/: Cargo.toml
crates/vlrp-api/src/: lib.rs
crates/vlrp-config/: Cargo.toml
crates/vlrp-domain/: Cargo.toml
crates/vlrp-domain/src/: lib.rs
crates/vlrp-jobs/: Cargo.toml
crates/vlrp-jobs/src/: lib.rs
crates/vlrp-jobs/tests/: postgres.rs
crates/vlrp-observability/: Cargo.toml
crates/vlrp-persistence-sqlx/: Cargo.toml
crates/vlrp-persistence-sqlx/src/: lib.rs
crates/vlrp-persistence-sqlx/tests/: postgres.rs
crates/vlrp-protocol/: Cargo.toml
crates/vlrp-protocol/src/: lib.rs
crates/vlrp-test-support/: Cargo.toml
crates/vlrp-test-support/fixtures/: valid-multiple-entry.json  valid-single-entry.json
crates/vlrp-test-support/src/: lib.rs
crates/vlrp-verifier/: Cargo.toml
crates/vlrp-verifier/src/: lib.rs
docs/runbooks/: backup-restore.md  rollback.md  technical-staging.md
infra/opentofu/: README.md  outputs.tf  variables.tf
infra/opentofu/aws-staging/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
migrations/: 0001_initial.sql  0002_outbox_leases.sql  0003_invoice_collection_fields.sql  0004_invoice_collection_failure.sql  0005_draw_block_facts.sql  0006_refunds.sql  0007_oidc_sessions.sql  0008_payout_leases.sql  0009_oidc_login_attempts.sql  0010_canonical_bitcoin_blocks.sql  0011_proof_publication_metadata.sql
