[workspace]
members = [
  "apps/api",
  "apps/worker",
  "crates/vlrp-api",
  "crates/vlrp-config",
  "crates/vlrp-domain",
  "crates/vlrp-observability",
  "crates/vlrp-persistence-sqlx",
  "crates/vlrp-protocol",
  "crates/vlrp-test-support",
  "crates/vlrp-verifier",
  "crates/vlrp-jobs",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.94"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openpool/openpool"

[workspace.dependencies]
axum = "0.8"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "json", "migrate", "macros"] }
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v4"] }
