[package]
name = "vlrp-api-app"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
vlrp-api = { path = "../../crates/vlrp-api" }
vlrp-config = { path = "../../crates/vlrp-config" }
vlrp-observability = { path = "../../crates/vlrp-observability" }
