[package]
name = "openpool-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
axum.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
utoipa.workspace = true
openpool-domain = { path = "../openpool-domain" }
openpool-oidc = { path = "../openpool-oidc" }
openpool-contract = { path = "../openpool-contract" }
openpool-payments = { path = "../openpool-payments" }
openpool-payments-mavapay = { path = "../openpool-payments-mavapay" }
openpool-persistence-sqlx = { path = "../openpool-persistence-sqlx" }
openpool-protocol = { path = "../openpool-protocol" }
openpool-verifier = { path = "../openpool-verifier" }
openpool-web = { path = "../openpool-web" }

[dev-dependencies]
hex.workspace = true
hmac.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
