[package]
name = "openpool-api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
aes-gcm.workspace = true
axum.workspace = true
base64.workspace = true
dioxus.workspace = true
openidconnect.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
utoipa.workspace = true
openpool-core = { path = "../openpool-core" }
openpool-protocol = { path = "../openpool-protocol" }
openpool-verifier = { path = "../openpool-verifier" }
url = "2"

[dev-dependencies]
hex.workspace = true
hmac.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower.workspace = true
