[package]
name = "openpool-application"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
openpool-contract = { path = "../openpool-contract" }
openpool-domain = { path = "../openpool-domain" }
openpool-payments = { path = "../openpool-payments" }
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
