[package]
name = "openpool-bitcoin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
time.workspace = true
openpool-protocol = { path = "../openpool-protocol" }

[dev-dependencies]
tokio.workspace = true
