[package]
name = "openpool-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["server"]
server = [
  "dep:async-trait",
  "dep:hex",
  "dep:hmac",
  "dep:reqwest",
  "dep:serde_json",
  "dep:sha2",
  "dep:sqlx",
  "dep:thiserror",
  "dep:tracing-subscriber",
  "dep:openpool-verifier",
]
test-support = ["server"]

[dependencies]
serde.workspace = true
time.workspace = true
uuid.workspace = true
utoipa.workspace = true
openpool-protocol = { path = "../openpool-protocol" }

async-trait = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
openpool-verifier = { path = "../openpool-verifier", optional = true }

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
