[package]
name = "openpool-jobs"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
openpool-domain = { path = "../openpool-domain" }

[dev-dependencies]
tokio.workspace = true
openpool-persistence-sqlx = { path = "../openpool-persistence-sqlx" }
