[package]
name = "openpool-oidc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
openidconnect.workspace = true
reqwest.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
url = "2"
uuid.workspace = true
