[package]
name = "openpool-payments-mavapay"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
hex.workspace = true
hmac.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
sha2.workspace = true
uuid.workspace = true
openpool-payments = { path = "../openpool-payments" }
openpool-domain = { path = "../openpool-domain" }

[dev-dependencies]
axum.workspace = true
tokio.workspace = true
uuid.workspace = true
