[package]
name = "openpool-persistence-sqlx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
openpool-domain = { path = "../openpool-domain" }
openpool-contract = { path = "../openpool-contract" }
openpool-protocol = { path = "../openpool-protocol" }
openpool-verifier = { path = "../openpool-verifier" }

[dev-dependencies]
tokio.workspace = true
openpool-verifier = { path = "../openpool-verifier" }
