[package]
name = "openpool-protocol"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_jcs.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
openpool-domain = { path = "../openpool-domain" }
