[package]
name = "openpool-verifier-wasm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json.workspace = true
wasm-bindgen.workspace = true
openpool-protocol = { path = "../openpool-protocol" }
openpool-verifier = { path = "../openpool-verifier" }
