[package]
name = "openpool-verifier"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
openpool-domain = { path = "../openpool-domain" }
openpool-protocol = { path = "../openpool-protocol" }

[dev-dependencies]
serde_json.workspace = true
uuid.workspace = true
