[package]
name = "openpool-web"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dioxus.workspace = true
openpool-contract = { path = "../openpool-contract" }
openpool-verifier-wasm = { path = "../openpool-verifier-wasm" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location"] }
