[package]
name = "vlrp-persistence-sqlx"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
vlrp-domain = { path = "../vlrp-domain" }
vlrp-protocol = { path = "../vlrp-protocol" }

[dev-dependencies]
tokio.workspace = true
