[package]
name = "vlrp-verifier"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
vlrp-domain = { path = "../vlrp-domain" }
vlrp-protocol = { path = "../vlrp-protocol" }

[dev-dependencies]
serde_json.workspace = true
uuid.workspace = true
